<resources>
    <string name="app_name">WellTimed</string>

    <!-- Home Page -->
    <string name="app_description">View your timetable everywhere.</string>
    <string name="powered_by">Powered by Erni Wo</string>

    <!-- Activity: Login & Sign Up-->
    <string name="welcome_title">Welcome to WellTimed!</string>
    <string name="signup_choose_role">Please choose your role:</string>
    <string name="login_choose_role">Please choose your role:</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_sign_up_button">Sign Up</string>

    <string name="hint_email">Email Address</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_id">School ID Number</string>

    <string name="placeholder_email">e.g.: ad@gmail.com</string>
    <string name="placeholder_name">e.g.: Jane Smith</string>
    <string name="placeholder_password">At least 6 characters!</string>
    <string name="placeholder_signup_id">e.g.: S0034</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>

    <string name="helper_text_sign_up_idnum">Your ID Must be in the Format of: \nS**** if you are a student.\t\te.g. S0034 \nT**** if you are a teacher.\t\te.g. T0015 \nA**** if you are an admin.\t\te.g. A0009</string>


    <!-- Activity: adminEditClassTimetable-->
    <string name="hint_subject">Subject</string>
    <string name="hint_location">Location</string>
    <string name="hint_day_of_week">Day of Week</string>
    <string name="hint_period">Period of the day</string>
    <string name="hint_teacher">Select Teacher\'s ID</string>

    <string name="placeholder_subject">e.g.: Math</string>
    <string name="placeholder_location">e.g.: Room 5</string>
    <string name="placeholder_teacher">e.g.: Jane Smith</string>

    <string-array name="select_day_of_week">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="select_period_of_day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <!-- Activity: adminAddNewCLass-->
    <string name="hint_select_grade">Select Grade Number</string>
    <string name="hint_select_class">Enter Class Number</string>
    <string name="hint_select_students">Select Student Numbers</string>

    <string name="placeholder_select_grade">e.g. Grade 5</string>
    <string name="placeholder_select_class">Range: 1 to 99</string>
    <string name="placeholder_select_students">e.g.: S0002, S0006</string>

    <string name="helper_text_add_new_class_idnum">Strictly Integer only* Range: 1 to 50</string>

    <string-array name="select_grades">
        <item>Grade 1</item>
        <item>Grade 2</item>
        <item>Grade 3</item>
        <item>Grade 4</item>
        <item>Grade 5</item>
        <item>Grade 6</item>
        <item>Grade 7</item>
        <item>Grade 8</item>
        <item>Grade 9</item>
        <item>Grade 10</item>
        <item>Grade 11</item>
        <item>Grade 12</item>
    </string-array>

    <!-- Activity: adminAddNewTeacher-->
    <string name="hint_enter_teacher_name">Enter Teacher Name</string>
    <string name="hint_enter_teacher_id">Enter Teacher ID</string>

    <string name="placeholder_enter_teacher_name">e.g. Jane Smith</string>
    <string name="placeholder_enter_teacher_id">e.g. T0025</string>

    <string name="helper_text_add_new_teacher_idnum">Teacher ID Must be in the format of: T****. \te.g. T0034</string>


    <!-- Activity: adminAddNewStudent-->
    <string name="hint_enter_student_name">Enter Student Name</string>
    <string name="hint_enter_student_id">Enter Student ID</string>

    <string name="placeholder_enter_student_name">e.g. Jane Smith</string>
    <string name="placeholder_enter_student_id">e.g. S0018</string>

    <string name="helper_text_add_new_student_idnum">Student ID Must be in the format of: S****. \te.g. S0365</string>

    <!-- Activity: adminManageListOfClasses-->
    <string name="list_of_class_add_new_button">Add New Class</string>
    <string name="list_of_class_above_text">Click to view the timetables of these classes: \n(Long click to delete)</string>

    <!-- Activity: adminManageListOfTeachers-->
    <string name="list_of_teacher_add_new_button">Add New Teacher</string>
    <string name="list_of_teacher_above_text">Click to view the timetables of these teachers: \n(Long click to delete)</string>

    <!-- Activity: adminManageListOfStudents-->
    <string name="list_of_student_add_new_button">Add New Student</string>
    <string name="list_of_student_above_text">Students in the system:</string>

    <!-- Buttons -->
    <string name="skip_button">Skip</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="Start_button">Start</string>
    <string name="title_activity_basic">BasicActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>