<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminAddNewStudentActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/enter_student_name"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_enter_student_name"
        android:inputType="text"
        app:endIconMode="clear_text"
        android:textSize="@dimen/text_size_medium"
        app:placeholderText="@string/placeholder_enter_student_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_edit_text_student_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/enter_student_ID"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_enter_student_id"
        android:inputType="text"
        app:endIconMode="clear_text"
        android:textSize="@dimen/text_size_medium"
        app:placeholderText="@string/placeholder_enter_student_id"
        app:helperText="@string/helper_text_add_new_student_idnum"
        app:helperTextTextColor="@color/DarkPeach"
        app:layout_constraintTop_toBottomOf="@+id/enter_student_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_edit_text_student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/add_new_class_id_helper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/helper_text_add_new_student_idnum"
        android:textSize="12dp"
        android:textColor="@color/DarkGrey"
        app:layout_constraintTop_toBottomOf="@+id/enter_student_ID"
        app:layout_constraintLeft_toLeftOf="@+id/enter_student_ID"/>


    <Button
        android:id="@+id/add_new_student_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Add New Student"
        app:layout_constraintTop_toBottomOf="@+id/add_new_class_id_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>