<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_login"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="45sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="50dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/login_email"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/text_size_medium"
        app:placeholderText="@string/placeholder_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:endIconMode="clear_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
<!--    <EditText-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:id="@+id/email"-->
<!--        android:background="@drawable/edit_text_background"-->
<!--        android:layout_width="@dimen/edit_text_width"-->
<!--        android:layout_height="@dimen/edit_text_height"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:ems="10"-->
<!--        android:fontFamily="sans-serif"-->
<!--        android:hint="@string/hint_email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:textSize="@dimen/text_size_medium"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/header"-->
<!--        />-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/login_password"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_password"
        android:textSize="@dimen/text_size_medium"
        app:placeholderText="@string/placeholder_password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
<!--    <EditText-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:id="@+id/login_edit_text_password"-->
<!--        android:layout_width="@dimen/edit_text_width"-->
<!--        android:layout_height="@dimen/edit_text_height"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:ems="10"-->
<!--        android:fontFamily="sans-serif"-->
<!--        android:hint="@string/hint_password"-->
<!--        android:inputType="numberPassword"-->
<!--        android:textSize="@dimen/text_size_medium"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/login_edit_text_email"-->
<!--        />-->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot_password"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up_button"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/chooseRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_choose_role"
        android:textSize="@dimen/text_size_small_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"/>

    <RadioGroup
        android:id="@+id/chooseRoleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseRole" >

        <RadioButton
            android:id="@+id/radiobutton_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student"
            android:textColor="@color/DarkGrey"
            android:textSize="@dimen/text_size_small_medium"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radiobutton_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="Teacher"
            android:textColor="@color/DarkGrey"
            android:textSize="@dimen/text_size_small_medium"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radiobutton_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin"
            android:textColor="@color/DarkGrey"
            android:textSize="@dimen/text_size_small_medium"
            android:onClick="checkButton"/>
    </RadioGroup>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_button"
        android:fontFamily="sans-serif"
        android:text="@string/button_login"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseRoleGroup" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingCOnstraints"
        />



</androidx.constraintlayout.widget.ConstraintLayout>